2004-12-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Tiny cleanup: refer to db instead of DB within the Muine class.

2004-12-28  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/CoverDatabase.cs:
	* src/DatabaseUtils.cs:
	* src/Makefile.am:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Split off database code to DatabaseUtils.cs.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-gst.c: (player_construct), (tick_timeout),
	(iterate_cb):

	Separate timeout for tick signals.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverImage.cs:
	* src/PlaylistWindow.cs:
	* src/StringUtils.cs:

	Clean up SelectionData handling.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up DND code.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up last EOS handling.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-gst.c: (player_set_file):
	* libmuine/player-xine.c: (player_set_file):

	Remove state restoration code. It is done in Player already.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Remove obsoleted GConfClient property.

2004-12-26  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/About.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/Muine.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	* src/StockIcons.cs:
	
	Made all variables private and added accessor properties where 
	appropriate.

	* src/CoverDatabase.cs:
	
	Changed LoadedCover from a class to a struct.

	* src/SongDatabase.cs:

	Changed ChangedSong from a class to a struct.

	* src/About.cs:
	
	Replaced "version" with the public constant "Version" and removed
	the related property.

	* src/CoverDatabase.cs:

	Made AlbumCoverSize constant.

	* src/AddSongWindow.cs:
	
	Made FakeLength constant.

2004-12-26  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/SignalUtils.cs:

	Added a SignalUtils class with SignalDelegates and SignalConnect which
	wraps g_signal_connect_data.
